# youth-icon-bot

./: .env.example  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml
bot/: main.py
bot/cogs/: about.py  join.py
bot/utils/: constants.py
